tests/ui/alloc-error/alloc-error-handler-deprecated.stderr
error[E0432]: unresolved import `alloc::layout`
  --> $DIR/alloc-error-handler-deprecated.rs:6:12
   |
LL | use alloc::layout::Layout;
   |            ^^^^^^ could not find `layout` in `alloc`

error: use of deprecated macro `alloc_error_handler`: Please use #[panic_handler] instead
  --> $DIR/alloc-error-handler-deprecated.rs:8:3
   |
LL | #[alloc_error_handler]
   |   ^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/alloc-error-handler-deprecated.rs:2:9
   |
LL | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
